# school

./: CMakeLists.txt
PROG-I-1/ieskaite/: 1.cpp  6.cpp  7.cpp  8.cpp  9.cpp
PROG-I-1/prog10/: 1.cpp  24.cpp
PROG-I-1/prog10/tasks/: 10.1.cpp  10.2.cpp
PROG-I-1/prog11/: 1.cpp
PROG-I-1/prog12/: 29.cpp  video.cpp  video2.cpp  video3.cpp
PROG-I-1/prog12/tasks/: 12.1.cpp
PROG-I-1/prog5/: variable.cpp
PROG-I-1/prog5/tasks/: task5_2.cpp  task5_3.cpp
PROG-I-1/prog6/: fourth.cpp  seven.cpp
PROG-I-1/prog7/: 1.cpp  3.cpp  4.cpp  5.cpp  7.cpp  9.cpp
PROG-I-1/prog7/tasks/: 7.2.cpp  7.3.cpp
PROG-I-1/prog9/: 1.cpp  20.cpp  21.cpp  video.cpp
PROG-I-1/prog9/tasks/: 9.1.cpp  9.3.cpp
PROG-I-2/ieskaite/: 1.cpp  6.cpp  7.cpp  8.cpp  marts.txt
PROG-I-2/prog13/: 30.cpp  31.cpp  32.cpp  33.cpp  34.cpp  35.cpp  video.cpp
PROG-I-2/prog13/tasks/: 13.1.cpp  13.2.cpp
PROG-I-2/prog14/: 36.cpp  37.cpp  38.cpp  39.cpp  40.cpp
PROG-I-2/prog14/tasks/: 14.1.cpp  14.2.cpp  14.3.cpp
PROG-I-2/prog15/: 41.cpp  42.cpp  43.cpp  44.cpp  video.cpp
PROG-I-2/prog15/tasks/: 15.1.cpp  15.2.cpp  15.3.cpp
PROG-I-2/prog16/: 45.cpp  46.cpp
PROG-I-2/prog16/tasks/: 16.1.cpp  16.2.cpp  16.3.cpp
PROG-I-2/prog17/: 47.cpp  48.cpp  v.cpp
PROG-I-2/prog17/tasks/: 17.cpp
PROG-I-2/prog20/: 49.cpp  50.cpp  51.cpp  52.cpp  burti.txt  info.in.txt  info.out.txt  info.txt  kontakti.txt  personas.txt  preces.txt  v3.cpp  v4.cpp  video.cpp  video2.cpp
PROG-I-2/prog20/tasks/: 20.1.cpp  20.2.cpp  20.3.cpp  burtsO.txt  persona.txt  rezultats.txt  skaitli.txt  teksts.txt
PROG-I-2/prog21/: 53.cpp  54.cpp  55.cpp  56.cpp  57.cpp  58.cpp  v2.cpp  video.cpp
PROG-I-2/prog21/tasks/: 21.1.cpp  21.2.cpp  21.3.cpp
PROG-I-2/prog22/: 59.cpp  60.cpp  61.cpp  62.cpp  v.cpp  v1.cpp
PROG-I-2/prog22/tasks/: 22.1.cpp  22.2.cpp
prog10/: 22.cpp  23.cpp  video.cpp
prog10/tasks/: 10.3.cpp
prog11/: 2.cpp  video.cpp
prog11/tasks/: 11.1.cpp  11.2.cpp
prog12/: 27.cpp  28.cpp
prog12/tasks/: 12.2.cpp
prog3/: algorithm
prog4/: video.cpp
prog5/: var.cpp
prog5/tasks/: task5_1.cpp
prog6/: fifth.cpp
prog6/tasks/: 6_1.cpp  6_3.cpp
prog7/: 10.cpp  2.cpp  8.cpp
prog7/tasks/: 7  7.1.cpp
prog8/: 1.cpp  2.cpp
prog8/tasks/: 8.1.cpp  8.2.cpp
prog9/: v.cpp
prog9/tasks/: 9  9.2.cpp
school/coding/prog3/: algorithm.cpp
school/coding/prog4/: video
school/coding/prog6/: first.cpp  second.cpp  six.cpp  third.cpp
school/coding/prog6/tasks/: 6  6_2.cpp  6_3.cpp
