cmake_minimum_required(VERSION 3.26)
project(coding)

set(CMAKE_CXX_STANDARD 14)

add_executable(coding
        PROG-I-1/ieskaite/1.cpp
        PROG-I-1/ieskaite/6.cpp
        PROG-I-1/ieskaite/7.cpp
        PROG-I-1/ieskaite/8.cpp
        PROG-I-1/ieskaite/9.cpp
        PROG-I-1/prog10/tasks/10.1.cpp
        PROG-I-1/prog10/tasks/10.2.cpp
        PROG-I-1/prog10/tasks/10.3.cpp
        PROG-I-1/prog10/1.cpp
        PROG-I-1/prog10/22.cpp
        PROG-I-1/prog10/23.cpp
        PROG-I-1/prog10/24.cpp
        PROG-I-1/prog10/video.cpp
        PROG-I-1/prog11/tasks/11.1.cpp
        PROG-I-1/prog11/tasks/11.2.cpp
        PROG-I-1/prog11/1.cpp
        PROG-I-1/prog11/2.cpp
        PROG-I-1/prog11/video.cpp
        PROG-I-1/prog12/tasks/12.1.cpp
        PROG-I-1/prog12/tasks/12.2.cpp
        PROG-I-1/prog12/27.cpp
        PROG-I-1/prog12/28.cpp
        PROG-I-1/prog12/29.cpp
        PROG-I-1/prog12/video.cpp
        PROG-I-1/prog12/video2.cpp
        PROG-I-1/prog12/video3.cpp
        PROG-I-1/prog3/algorithm.cpp
        PROG-I-1/prog4/video.cpp
        PROG-I-1/prog5/tasks/task5_1.cpp
        PROG-I-1/prog5/tasks/task5_2.cpp
        PROG-I-1/prog5/tasks/task5_3.cpp
        PROG-I-1/prog5/var.cpp
        PROG-I-1/prog5/variable.cpp
        PROG-I-1/prog6/tasks/6_1.cpp
        PROG-I-1/prog6/tasks/6_2.cpp
        PROG-I-1/prog6/tasks/6_3.cpp
        PROG-I-1/prog6/fifth.cpp
        PROG-I-1/prog6/first.cpp
        PROG-I-1/prog6/fourth.cpp
        PROG-I-1/prog6/second.cpp
        PROG-I-1/prog6/seven.cpp
        PROG-I-1/prog6/six.cpp
        PROG-I-1/prog6/third.cpp
        PROG-I-1/prog7/tasks/7.1.cpp
        PROG-I-1/prog7/tasks/7.2.cpp
        PROG-I-1/prog7/tasks/7.3.cpp
        PROG-I-1/prog7/1.cpp
        PROG-I-1/prog7/10.cpp
        PROG-I-1/prog7/2.cpp
        PROG-I-1/prog7/3.cpp
        PROG-I-1/prog7/4.cpp
        PROG-I-1/prog7/5.cpp
        PROG-I-1/prog7/7.cpp
        PROG-I-1/prog7/8.cpp
        PROG-I-1/prog7/9.cpp
        PROG-I-1/prog8/tasks/8.1.cpp
        PROG-I-1/prog8/tasks/8.2.cpp
        PROG-I-1/prog8/1.cpp
        PROG-I-1/prog8/2.cpp
        PROG-I-1/prog9/tasks/9.1.cpp
        PROG-I-1/prog9/tasks/9.2.cpp
        PROG-I-1/prog9/tasks/9.3.cpp
        PROG-I-1/prog9/1.cpp
        PROG-I-1/prog9/20.cpp
        PROG-I-1/prog9/21.cpp
        PROG-I-1/prog9/v.cpp
        PROG-I-1/prog9/video.cpp
        PROG-I-2/prog13/tasks/13.1.cpp
        PROG-I-2/prog13/tasks/13.2.cpp
        PROG-I-2/prog13/30.cpp
        PROG-I-2/prog13/31.cpp
        PROG-I-2/prog13/32.cpp
        PROG-I-2/prog13/33.cpp
        PROG-I-2/prog13/34.cpp
        PROG-I-2/prog13/35.cpp
        PROG-I-2/prog13/video.cpp
        PROG-I-2/prog14/tasks/14.1.cpp
        PROG-I-2/prog14/tasks/14.2.cpp
        PROG-I-2/prog14/tasks/14.3.cpp
        PROG-I-2/prog14/36.cpp
        PROG-I-2/prog14/37.cpp
        PROG-I-2/prog14/38.cpp
        PROG-I-2/prog14/39.cpp
        PROG-I-2/prog14/40.cpp
        PROG-I-2/prog15/tasks/15.1.cpp
        PROG-I-2/prog15/tasks/15.2.cpp
        PROG-I-2/prog15/tasks/15.3.cpp
        PROG-I-2/prog15/41.cpp
        PROG-I-2/prog15/42.cpp
        PROG-I-2/prog15/43.cpp
        PROG-I-2/prog15/44.cpp
        PROG-I-2/prog15/video.cpp
        PROG-I-2/prog16/tasks/16.1.cpp
        PROG-I-2/prog16/tasks/16.2.cpp
        PROG-I-2/prog16/tasks/16.3.cpp
        PROG-I-2/prog16/45.cpp
        PROG-I-2/prog16/46.cpp
        PROG-I-2/prog17/47.cpp
        PROG-I-2/prog17/48.cpp
        PROG-I-2/prog17/v.cpp
        PROG-I-2/prog17/tasks/17.cpp)
